--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -83,10 +83,10 @@
         <mat-icon>delete</mat-icon>
         <span>Reset All Data (Wipe)</span>
       </button>
-      <button mat-menu-item routerLink="/notifications">
+      <!-- <button mat-menu-item routerLink="/notifications">
         <mat-icon>settings</mat-icon>
         <span>Notification Settings</span>
-      </button>
+      </button> -->
     </mat-menu>
 
     <button mat-icon-button (click)="toggleProfileSidenav()" aria-label="Toggle profile" class="profile-button">
@@ -241,13 +241,13 @@
           }
           }
         </mat-nav-list>
-        <mat-divider></mat-divider>
-        <mat-nav-list>
+        <!-- <mat-divider></mat-divider> -->
+        <!-- <mat-nav-list>
           <a mat-list-item routerLink="/about" (click)="layout.isHandset() ? toggleProfileSidenav() : null">
             <mat-icon matListItemIcon>info</mat-icon>
             <span>About</span>
           </a>
-        </mat-nav-list>
+        </mat-nav-list> -->
         }
       </div>
     </mat-sidenav>
