--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -194,10 +194,10 @@
             <mat-icon matListItemIcon>key</mat-icon>
             <span>Credentials</span>
           </a>
-          <a mat-list-item routerLink="/settings" (click)="layout.isHandset() ? toggleProfileSidenav() : null">
+          <!-- <a mat-list-item routerLink="/settings" (click)="layout.isHandset() ? toggleProfileSidenav() : null">
             <mat-icon matListItemIcon>settings</mat-icon>
             <span>Settings</span>
-          </a>
+          </a> -->
           <a mat-list-item (click)="logout(); toggleProfileSidenav()">
             <mat-icon matListItemIcon>logout</mat-icon>
             <span>Logout</span>
