--- a/src/app/pages/credentials/credentials.component.html
+++ b/src/app/pages/credentials/credentials.component.html
@@ -38,7 +38,7 @@
       </div>
     </mat-card-content>
   </mat-card>
-  } @else if (nostrService.activeAccount()?.privkey) {
+  } @else if (nostrService.account()?.privkey) {
   <mat-card class="private-key-card">
     <mat-card-header>
       <mat-card-title>Private Key (nsec)</mat-card-title>
