--- a/src/app/pages/badges/badges.component.html
+++ b/src/app/pages/badges/badges.component.html
@@ -84,7 +84,7 @@
             </ng-template>
             <div class="badges-grid">
                 @for (badge of badgeDefinitionsEvent(); track badge.id) {
-                    <app-badge [badge]="badge"></app-badge>
+                    <app-badge [badge]="badge" (click)="viewBadgeDetails(badge)"></app-badge>
                 }
 
                 <!-- @for (badge of createdBadges(); track badge.id) {
